remove and add name

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,14 @@
         "filp/whoops": "^2.14",
         "twig/twig": "^3.0",
         "bramus/router": "~1.5",
-        "automattic/woocommerce": "^3.0"
     }
+	"name" : "Parrot MVC",
+	"description" : "a very useful php mvc framework",
+	"authors" : [{
+			"name" : "masih ghaznavi",
+			"homepage" : "https://masihgh.ir",
+			"email" : "masihgraph@gmail.com",
+			"role" : "programmer"
+		}
+	]
 }
